Fix alignment and coverage of extended interaction target mixin

--- a/app-next/styles/base/accessibility.sass
+++ b/app-next/styles/base/accessibility.sass
@@ -17,6 +17,7 @@
 	content: ""
 	display: block
 	position: absolute
+	inset: 0
 	width: 100%
 	height: 100%
-	transform: translateY(-100%) scaleX($extensionFactor) scaleY($extensionFactor * $extensionAspect)
+	transform: translateY(0%) scaleX($extensionFactor) scaleY($extensionFactor * $extensionAspect)
